--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router": "6.0.0-beta.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "6.0.0-beta.0",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
